syntax = "proto2";
package openscq30;

option java_package = "com.oppzippy.openscq30.lib.protobuf";
option java_multiple_files = true;

message FirmwareVersion {
  required uint32 major = 1;
  required uint32 minor = 2;
}
